[gd_scene load_steps=7 format=2]

[ext_resource path="res://00_Font_ROTARY/Inconstant-Base100.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/PlayerUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 1 )

[node name="PlayerUI" type="Control"]
margin_left = 15.0
margin_top = 12.0
margin_right = 197.0
margin_bottom = 589.0
script = ExtResource( 2 )

[node name="TimerLabel" type="Label" parent="."]
margin_left = 115.0
margin_top = 43.0
margin_right = 217.0
margin_bottom = 96.0
rect_rotation = 90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "10:00"
align = 1
valign = 1

[node name="RoundContainer" type="Control" parent="."]
margin_left = 14.0
margin_top = 191.0
margin_right = 155.0
margin_bottom = 331.0

[node name="RoundLabel" type="Label" parent="RoundContainer"]
margin_left = 140.0
margin_top = 18.0
margin_right = 242.0
margin_bottom = 71.0
rect_rotation = 90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Round"
align = 1
valign = 1
uppercase = true

[node name="RoundValue" type="Label" parent="RoundContainer"]
margin_left = 93.0
margin_top = 18.0
margin_right = 195.0
margin_bottom = 102.0
rect_rotation = 90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "01"
align = 1
valign = 1
uppercase = true

[node name="PlayerLabel" type="Label" parent="."]
margin_left = 115.0
margin_top = 379.0
margin_right = 265.0
margin_bottom = 432.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 5 )
text = "Player 1"
align = 1
valign = 1
uppercase = true
